--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -11,4 +11,4 @@
 @import "./categorySpecificBlog";
 @import "./bottomComponent.scss";
 @import "./detailProperty.scss";
-@import "./outThoughts";
+@import "./ourThoughts";
