--- a/styles/components/_MainProperty.scss
+++ b/styles/components/_MainProperty.scss
@@ -23,11 +23,13 @@
     overflow: hidden;
     display: flex;
     align-items: center;
+    overflow: hidden;
 
     .img {
       border-radius: inherit;
       width: 100%;
       height: auto;
+      transition: 0.3s ease-in-out;
     }
   }
 
@@ -218,6 +220,14 @@
   }
 }
 
+.card:hover .propertyTitle p {
+  text-decoration: underline;
+}
+
+.card:hover .img {
+  transform: scale(1.1);
+}
+
 @media screen and (min-width: 1024px) {
   .card {
     width: 100%;
@@ -231,7 +241,8 @@
       width: 100%;
       height: 198px;
 
-      .img {}
+      .img {
+      }
     }
 
     .contentContainer {
