--- a/styles/components/_homeBlogTypeMain.scss
+++ b/styles/components/_homeBlogTypeMain.scss
@@ -7,17 +7,16 @@
   min-width: 250px;
   width: 100%;
   height: 250px;
-  background: linear-gradient(
-    0.14deg,
-    rgba(17, 16, 16, 0.7) 12.94%,
-    rgba(0, 0, 0, 0) 67.86%
-  );
+  background: linear-gradient(0.14deg,
+      rgba(17, 16, 16, 0.7) 12.94%,
+      rgba(0, 0, 0, 0) 67.86%);
   border-radius: 6px;
   align-self: stretch;
   margin: 0px;
   padding: 0px;
-  transition: 0.4s all;
   position: relative;
+
+
 
   .thumbnail {
     display: flex;
@@ -27,33 +26,36 @@
     height: 100%;
     z-index: 1;
     position: absolute;
-    background: linear-gradient(
-      0.14deg,
-      rgba(17, 16, 16, 0.7) 12.94%,
-      rgba(0, 0, 0, 0) 67.86%
-    );
+    background: linear-gradient(0.14deg,
+        rgba(17, 16, 16, 0.7) 12.94%,
+        rgba(0, 0, 0, 0) 67.86%);
+    overflow: hidden;
 
     .blogCardBackground {
       width: 100%;
       height: 100%;
       object-fit: cover;
       z-index: -1;
+      transition-delay: 0.2s;
+      // transition-duration: 1s;
+      transition: 0.3s ease-in-out;
+
     }
   }
 
-  .thumbnail::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: inherit;
-    background: linear-gradient(
-      0.14deg,
-      rgba(17, 16, 16, 0.7) 12.94%,
-      rgba(0, 0, 0, 0) 67.86%
-    );
-  }
+  // .thumbnail::after {
+  //   content: "";
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0;
+  //   height: inherit;
+  //   background: linear-gradient(
+  //     0.14deg,
+  //     rgba(17, 16, 16, 0.7) 12.94%,
+  //     rgba(0, 0, 0, 0) 67.86%
+  //   );
+  // }
 
   .cardContent {
     display: flex;
@@ -81,29 +83,30 @@
       padding: 0px 12px;
       border-radius: 3px;
       z-index: 3;
-      
+
       isolation: isolate;
 
-      .blogTagLinks{
+      .blogTagLinks {
         display: inline-block;
         transform: none;
-      p {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        font-family: "Ek Mukta";
-        font-style: normal;
-        font-weight: 400;
-        font-size: 10px;
-        line-height: 140%;
-        text-transform: uppercase;
-        color: #ffffff;
-        height: fit-content;
-        margin: 0px;
-        padding: 0px;
+
+        p {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          font-family: "Ek Mukta";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 10px;
+          line-height: 140%;
+          text-transform: uppercase;
+          color: #ffffff;
+          height: fit-content;
+          margin: 0px;
+          padding: 0px;
+        }
       }
-    }
     }
 
     .blogTitle {
@@ -134,6 +137,7 @@
         height: fit-content;
       }
     }
+
     .blogBy {
       display: flex;
       flex-direction: row;
@@ -159,19 +163,30 @@
   }
 }
 
+// .homeBlogTypeMain:hover .blogCardBackground {
+//   transform: scale(1.3);
+// }
+
+.homeBlogTypeMain:hover .blogTitle p {
+  text-decoration: underline;
+}
+
+.homeBlogTypeMain:hover .blogCardBackground {
+  transform: scale(1.2);
+}
+
+
 @media only screen and (min-width: 710px) {
   .homeBlogTypeMain {
     height: 500px;
 
     .thumbnail {
-      .blogCardBackground {
-      }
+      .blogCardBackground {}
     }
 
     .cardContent {
       .blogCategoryTag {
-        p {
-        }
+        p {}
       }
 
       .blogTitle {
@@ -181,14 +196,15 @@
           font-size: 24px;
         }
       }
+
       .blogBy {
+
         .author,
         .posted {
           font-size: 14px;
         }
 
-        .separator {
-        }
+        .separator {}
       }
     }
   }
@@ -200,14 +216,12 @@
     height: 500px;
 
     .thumbnail {
-      .blogCardBackground {
-      }
+      .blogCardBackground {}
     }
 
     .cardContent {
       .blogCategoryTag {
-        p {
-        }
+        p {}
       }
 
       .blogTitle {
@@ -217,13 +231,13 @@
           font-size: 24px;
         }
       }
-      .blogBy {
-        .author,
-        .posted {
-        }
 
-        .separator {
-        }
+      .blogBy {
+
+        .author,
+        .posted {}
+
+        .separator {}
       }
     }
   }
