--- a/styles/components/_homeLoan.scss
+++ b/styles/components/_homeLoan.scss
@@ -19,6 +19,7 @@
     overflow: hidden;
     display: flex;
     justify-content: center;
+    overflow: hidden;
 
     .homeLoanImage {
       width: auto;
@@ -26,6 +27,7 @@
       @media only screen and (min-width: 1024px) {
         width: unset;
         height: unset;
+        transition: 0.3s ease-in-out;
       }
     }
   }
@@ -84,6 +86,14 @@
       }
     }
   }
+}
+
+.homeLoan:hover .blogHeader p {
+  text-decoration: underline;
+}
+
+.homeLoan:hover .homeLoanImage {
+  transform: scale(1.1);
 }
 
 @media only screen and (min-width: 1024px) {
