--- a/styles/components/_lifeStyle.scss
+++ b/styles/components/_lifeStyle.scss
@@ -34,12 +34,16 @@
     );
     overflow: hidden;
     border-radius: 6px;
+    overflow: hidden;
+
     
 
     
     .image{
       height: 100%;
       width: auto;
+      transition: 0.3s ease-in-out;
+
     }
 
     .blogCardBackground {
@@ -167,4 +171,13 @@
     width: 100%;
     height: 100%;
   }
+}
+
+
+.lifestyle:hover .blogTitle p {
+  text-decoration: underline;
+}
+
+.lifestyle:hover .image {
+  transform: scale(1.1);
 }
