--- a/styles/components/_detailProperty.scss
+++ b/styles/components/_detailProperty.scss
@@ -88,6 +88,7 @@
             border-radius: inherit;
             width: 100%;
             height: auto;
+            transition: .3s ease-in-out;
           }
         }
 
@@ -277,4 +278,12 @@
       }
     }
   }
+}
+
+.propertyCard:hover .propertyTitle p {
+  text-decoration: underline;
+}
+
+.propertyCard:hover .img {
+  transform: scale(1.1);
 }
