--- a/styles/layout/_blogBodyRightSidebar.scss
+++ b/styles/layout/_blogBodyRightSidebar.scss
@@ -111,7 +111,7 @@
         font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 13px;
         line-height: 140%;
         color: #333333;
         border: none;
@@ -188,6 +188,7 @@
           font-size: 20px;
         }
         button {
+          font-size:16px
         }
       }
       .featuredSectionContainer {
