--- a/styles/components/_bottomComponent.scss
+++ b/styles/components/_bottomComponent.scss
@@ -11,9 +11,12 @@
         overflow: hidden;
         position: relative;
         overflow: hidden;
+        border-radius: 6px;
+
 
         .hover {
             position: absolute;
+            transition: .3s ease-in-out;
             width: 100%;
             height: 100%;
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
@@ -22,10 +25,11 @@
             justify-content: center;
             align-items: center;
             z-index: 2;
+            display: none;
 
             .playButton {
-                width: fit-content;
-                height: fit-content;
+                width: 24px;
+                height: 24px;
             }
         }
 
@@ -33,6 +37,7 @@
             width: 100%;
             height: auto;
             transition: .3s ease-in-out;
+            
         }
 
     }
@@ -82,3 +87,9 @@
   .bottomComponent:hover .image {
     transform: scale(1.1);
   }
+
+  
+.bottomComponent:hover .hover{
+    display: flex;
+}
+
