--- a/styles/components/_MainProperty.scss
+++ b/styles/components/_MainProperty.scss
@@ -15,6 +15,36 @@
   background: #ffffff;
   border: 1px solid #d8d8d8;
   border-radius: 6px;
+  position: relative;
+
+  .saleRentTag {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 12px;
+    gap: 10px;
+    position: absolute;
+    width: fit-content;
+    height: 26px;
+    left: 8px;
+    top: 8px;
+    background: #1cb35d;
+    border-radius: 3px;
+    z-index: 3;
+
+    p {
+      margin: 0;
+      padding: 0;
+      font-family: "Product Sans";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 10px;
+      line-height: 140%;
+      text-transform: capitalize;
+      color: #ffffff;
+    }
+  }
 
   .imageContainer {
     width: 100%;
@@ -147,8 +177,6 @@
             word-spacing: 2px;
           }
         }
-
-
       }
     }
 
@@ -185,14 +213,14 @@
         }
 
         .unit {
-          font-family: 'Product Sans', sans-serif;
+          font-family: "Product Sans", sans-serif;
           font-style: normal;
           font-weight: 400;
           font-size: 10px;
           line-height: 140%;
           display: flex;
           align-items: center;
-          color: #0000FF;
+          color: #0000ff;
         }
       }
 
@@ -252,11 +280,10 @@
       height: fit-content;
 
       .propertyTitle {
-
         p {
           width: fit-content;
           height: 28px;
-          font-family: 'Product Sans';
+          font-family: "Product Sans";
           font-style: normal;
           font-weight: 400;
           font-size: 20px;
@@ -266,7 +293,6 @@
       }
 
       .propertyAddress {
-
         p {
           margin: 0px;
           font-size: 12px;
@@ -274,12 +300,10 @@
       }
 
       .propertyOverview {
-
         .overviewDatas {
-
           .iconContainer {
-
-            .overviewIcons {}
+            .overviewIcons {
+            }
           }
 
           .overViewText {
@@ -288,7 +312,8 @@
             flex-direction: row;
             gap: 2px;
 
-            .overViewTags {}
+            .overViewTags {
+            }
           }
         }
       }
@@ -327,10 +352,7 @@
         .contactButtonContainer {
           background-color: transparent;
         }
-
       }
-
-
     }
   }
 }
