--- a/styles/components/_detailProperty.scss
+++ b/styles/components/_detailProperty.scss
@@ -77,6 +77,38 @@
         background: #ffffff;
         border: 1px solid #d8d8d8;
         border-radius: 6px;
+        position: relative;
+
+        .saleRentTag {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          padding: 6px 12px;
+          gap: 10px;
+          position: absolute;
+          width: fit-content;
+          height: 26px;
+          left: 16px;
+          top: 16px;
+          background: #1cb35d;
+          border-radius: 3px;
+          z-index: 3;
+      
+          p {
+            margin: 0;
+            padding: 0;
+            font-family: "Product Sans";
+            font-style: normal;
+            font-weight: 400;
+            font-size: 10px;
+            line-height: 140%;
+            text-transform: capitalize;
+            color: #ffffff;
+          }
+        }
+
+
 
         .imageContainer {
           width: 286px;
