--- a/styles/components/_MainProperty.scss
+++ b/styles/components/_MainProperty.scss
@@ -69,7 +69,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 0px;
-    gap: 12px;
+    gap: 8px;
     width: 100%;
     height: 122px;
 
@@ -202,7 +202,7 @@
           font-family: "Product Sans", sans-serif;
           font-style: normal;
           font-weight: 700;
-          font-size: 16px;
+          font-size: 18px;
           line-height: 140%;
           display: flex;
           align-items: center;
@@ -276,7 +276,7 @@
     .contentContainer {
       gap: 12px;
       width: 100%;
-      min-height: 128px;
+      min-height: none;
       height: fit-content;
 
       .propertyTitle {
@@ -295,7 +295,7 @@
       .propertyAddress {
         p {
           margin: 0px;
-          font-size: 12px;
+          font-size: 14px;
         }
       }
 
