--- a/styles/components/_detailProperty.scss
+++ b/styles/components/_detailProperty.scss
@@ -69,11 +69,11 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        padding: 8px 8px 16px;
+        padding: 12px 12px 24px;
         gap: 8px;
         isolation: isolate;
         width: 302px;
-        height: 358px;
+        height: fit-content;
         background: #ffffff;
         border: 1px solid #d8d8d8;
         border-radius: 6px;
@@ -94,7 +94,7 @@
           background: #1cb35d;
           border-radius: 3px;
           z-index: 3;
-      
+
           p {
             margin: 0;
             padding: 0;
@@ -108,10 +108,8 @@
           }
         }
 
-
-
         .imageContainer {
-          width: 286px;
+          // width: 295px;
           height: 198px;
           border-radius: 3px;
           overflow: hidden;
@@ -120,7 +118,7 @@
             border-radius: inherit;
             width: 100%;
             height: auto;
-            transition: .3s ease-in-out;
+            transition: 0.3s ease-in-out;
           }
         }
 
@@ -130,7 +128,7 @@
           flex-direction: column;
           align-items: flex-start;
           padding: 0px;
-          gap: 12px;
+          gap: 8px;
           width: 100%;
           height: 122px;
 
@@ -143,7 +141,7 @@
               font-family: "Product Sans", sans-serif;
               font-style: normal;
               font-weight: 700;
-              font-size: 16px;
+              font-size: 20px;
               line-height: 140%;
               color: #2c2c2c;
               margin: 0px;
@@ -160,7 +158,7 @@
               font-family: "Product Sans", sans-serif;
               font-style: normal;
               font-weight: 400;
-              font-size: 12px;
+              font-size: 14px;
               line-height: 140%;
               display: flex;
               align-items: center;
@@ -263,7 +261,7 @@
                 font-family: "Product Sans", sans-serif;
                 font-style: normal;
                 font-weight: 700;
-                font-size: 16px;
+                font-size: 18px;
                 line-height: 140%;
                 display: flex;
                 align-items: center;
@@ -277,7 +275,7 @@
                 font-family: "Product Sans", sans-serif;
                 font-style: normal;
                 font-weight: 400;
-                font-size: 10px;
+                font-size: 12px;
                 line-height: 140%;
                 display: flex;
                 align-items: center;
