--- a/styles/components/_detailProperty.scss
+++ b/styles/components/_detailProperty.scss
@@ -69,7 +69,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        padding: 12px 12px 24px;
+        padding: 12px 12px 0px 12px;
         gap: 8px;
         isolation: isolate;
         width: 302px;
