--- a/styles/pages/_id.scss
+++ b/styles/pages/_id.scss
@@ -228,138 +228,64 @@
               gap: 24px;
             }
 
-            .paginationSection {
-              .pageNumberArea {
+            .paginationSectionContainer {
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              align-items: center;
+
+              .paginationSection {
                 display: flex;
                 flex-direction: row;
-                justify-content: center;
                 align-items: center;
                 gap: 8px;
-                margin: 0px;
 
-                .pageIndex {
+                .ant-pagination-item {
+                  width: 32px;
+                  height: 32px;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  margin: 0;
+                  padding: 0;
                   background: #ffffff;
                   border: 1px solid #dfe3e8;
                   border-radius: 4px;
 
-                  .pageNumber {
-                    border-radius: 4px;
-                    width: 32px;
-                    height: 32px;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
+                  a{
+                    transform: none;
                     font-family: "Product Sans";
                     font-style: normal;
                     font-weight: 700;
                     font-size: 14px;
                     line-height: 140%;
                     text-align: center;
-                    color: black;
-                  }
-
-                  .page-link {
-                    margin: 0px;
-                    padding: 0px;
-                    border: none;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                    border-radius: 4px;
-
-                    .pageNumberIcon {
-                      margin: 0px;
-                      padding: 0px;
-                      display: flex;
-                      flex-direction: row;
-                      justify-content: center;
-                      align-items: center;
-                      border-radius: 4px;
-                      width: 32px;
-                      height: 32px;
-                    }
-
-                    .pageNumberIcon:hover {
-                      transform: none;
-                    }
-                  }
-
-                  .page-link:focus {
-                    box-shadow: none !important;
-                    border-color: transparent !important;
-                    border: none;
+                    color: #212B36;
                   }
                 }
 
-                .pageIndex:hover {
-                  border: 1px solid #0000ff;
-
-                  .pageNumber {
-                    color: #0000ff;
-                    background: #ffffff;
-                  }
-                }
-
-                .pageIndexIcon {
-                  background: #ffffff;
-                  border: 1px solid #dfe3e8;
-                  border-radius: 4px;
-
-                  .pageIconContainer {
-                    display: inline-block;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                    margin: 0px;
-                    padding: 0px;
-                    width: 100%;
-                    height: 100%;
-
-                    .pageNumberIcon {
-                      display: flex;
-                      flex-direction: row;
-                      justify-content: center;
-                      align-items: center;
-                      text-align: center;
-                    }
-                  }
-
-                  .pageIconContainer:hover {
-                    transform: none;
-                    background: transparent;
-                    border-radius: 4px;
-                    border: none;
-                  }
-
-                  .page-link {
-                    border: none;
-                    width: 32px;
-                    height: 32px;
-                    margin: 0px;
-                    padding: 0px;
-                    border: none;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                    border-radius: 4px;
-                  }
-
-                  .page-link:focus {
-                    box-shadow: none !important;
-                    border-color: transparent !important;
-                    border: none;
-                  }
-                }
-
-                .pageIndexIcon:hover {
-                  transform: none;
-                  border: 1px solid #919eab;
+                .ant-pagination-item-active {
+                  width: 32px;
+                  height: 32px;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
                   margin: 0;
                   padding: 0;
-                  background: #919eab;
+                  background: #ffffff;
+                  border: 1px solid #0000ff;
+                  border-radius: 4px;
+
+                  a {
+                    transform: none;
+                    font-family: "Product Sans";
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 14px;
+                    line-height: 140%;
+                    text-align: center;
+                    color: #0000ff;
+                  }
                 }
               }
             }
@@ -550,21 +476,4 @@
       }
     }
   }
-}
-
-//FOR ACTIVE PAGINATIONS
-.activePage {
-  border: 1px solid #0000ff !important;
-  .pageNumber {
-    background-color: #ffffff !important;
-    color: #0000ff !important;
-    display: none;
-  }
-  .pageNumber:hover {
-    transform: none;
-  }
-}
-.activePage:hover {
-  transform: none;
-  border: none;
 }
