--- a/styles/components/_marketNewsTypeMain.scss
+++ b/styles/components/_marketNewsTypeMain.scss
@@ -79,9 +79,9 @@
         margin: 0px;
         padding: 0px;
         font-family: "Ek Mukta";
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
+        font-style:normal; 
+        font-weight: bold;
+        font-size: 18px;
         line-height: 150%;
         color: #333333;
         overflow: hidden;
