--- a/styles/fonts/_main.scss
+++ b/styles/fonts/_main.scss
@@ -7,3 +7,9 @@
   font-family: "Ek Mukta";
   src: url("/Fonts/EkMukta-Regular.ttf") format("truetype");
 }
+
+@font-face {
+  font-family: "Ek Mukta Bold";
+  src: url("/Fonts/EkMukta-ExtraBlod.ttf") format("truetype");
+}
+
