--- a/styles/components/_bottomComponent.scss
+++ b/styles/components/_bottomComponent.scss
@@ -49,7 +49,7 @@
 
     .headingDiv {
       width: 100%;
-      height: 44px;
+      height: fit-content;
       font-family: "Ek Mukta";
       font-style: normal;
       font-weight: 700;
