--- a/styles/components/_marketNewsTypeSecondary.scss
+++ b/styles/components/_marketNewsTypeSecondary.scss
@@ -43,7 +43,7 @@
         font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 10px;
         line-height: 150%;
         text-transform: uppercase;
         color: #0000ff;
@@ -54,13 +54,14 @@
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
+      height: fit-content;
       p {
-        height: 46.5px;
+        height:24px;
         margin: 0px;
         padding-top: 2px;
         font-family: "Ek Mukta";
         font-style: normal;
-        font-weight: 700;
+        font-weight: bold;
         font-size: 16px;
         line-height: 150%;
         color: #333333;
@@ -68,7 +69,7 @@
         text-overflow: ellipsis;
         white-space: initial;
         display: -webkit-box;
-        -webkit-line-clamp: 2;
+        -webkit-line-clamp: 1;
         -webkit-box-orient: vertical;
       }
     }
@@ -95,7 +96,7 @@
       .blogHeader {
         p {
           font-size: 16px;
-          height: 48px;
+          height: 24px;
         }
       }
 
