--- a/styles/pages/_blogDetails.scss
+++ b/styles/pages/_blogDetails.scss
@@ -1,7 +1,29 @@
+.navBlend {
+  width: 100vw;
+  position: sticky;
+  height: 53px;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+  z-index: 3;
+}
+.secNavDivWrapper {
+  position: sticky;
+  .secNavDiv {
+    height: fit-content;
+    width: 100%;
+    position: sticky;
+    padding: 12px 15px 18px 15px;
+    background-color: #001338;
+    top: 53px;
+
+    @media screen and (min-width: 768px) {
+      padding: 12px 30px 18px 30px;
+    }
+  }
+}
 .blogDetailsAlignmentContainer {
   min-height: 100vh;
   height: 100%;
-  padding-bottom: 55px;
   width: 100%;
   background-color: ghostwhite;
   color: #333333;
@@ -11,36 +33,16 @@
   position: relative;
   overflow: hidden;
 
-  .navBlend {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    height: 53px;
-    background: #ffffff;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-    z-index: 3;
-  }
-
   .blogContainerDiv {
     position: relative;
     display: flex;
     flex-direction: column;
     position: relative;
-    top: 53px;
     width: 100%;
     align-items: center;
     min-width: 100vw;
     height: fit-content;
     background-color: #ffffff;
-
-    .blogSecNavBlend {
-      height: 105.5px;
-      width: 100%;
-      background-color: #001338;
-      position: absolute;
-      top: 0px;
-    }
 
     .footerBlend {
       position: absolute;
@@ -69,18 +71,6 @@
       position: relative;
       @media screen and (min-width: 768px) {
         max-width: 800px;
-      }
-
-      .secNavDiv {
-        height: fit-content;
-        width: 100%;
-        position: sticky;
-        padding: 12px 15px 18px 15px;
-        background-color: #001338;
-
-        @media screen and (min-width: 768px) {
-          padding: 12px 30px 18px 30px;
-        }
       }
 
       .bodyContainer {
@@ -489,10 +479,29 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .navBlend {
+    width: 100%;
+    position: sticky;
+    top: 0px;
+    height: 67px;
+    background: #ffffff;
+  }
+  .secNavDivWrapper {
+    position: sticky;
+
+    .secNavDiv {
+      height: fit-content;
+      width: 100%;
+      position: sticky;
+      padding: 12px 5.5% 18px 5.5%;
+      @media screen and (min-width: 1440px) {
+        padding: 12px 80px 18px 80px;
+      }
+    }
+  }
   .blogDetailsAlignmentContainer {
     height: 100%;
     padding: 0px;
-    padding-bottom: 69px;
     width: 100%;
     background: #ffffff;
     color: #333333;
@@ -501,26 +510,9 @@
     align-items: center;
     overflow: hidden;
 
-    .navBlend {
-      width: 100%;
-      position: fixed;
-      top: 0px;
-      height: 67px;
-      background: #ffffff;
-    }
-
     .blogContainerDiv {
       position: relative;
       width: 100%;
-      top: 67px;
-
-      .blogSecNavBlend {
-        height: 70px;
-        width: 100%;
-        background-color: #001338;
-        position: absolute;
-        top: 0px;
-      }
 
       .footerBlend {
         position: absolute;
@@ -547,13 +539,6 @@
         background-color: #ffffff;
         position: relative;
         box-shadow: none;
-
-        .secNavDiv {
-          height: fit-content;
-          width: 100%;
-          position: sticky;
-          padding: 12px 5.5% 18px 5.5%;
-        }
 
         .bodyContainer {
           padding: 24px 5.5% 40px 5.5%;
