--- a/styles/pages/_id.scss
+++ b/styles/pages/_id.scss
@@ -1,7 +1,30 @@
-.alignmentContainer {
+.navBlend {
+  width: 100vw;
+  position: sticky;
+  height: 53px;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+  z-index: 3;
+}
+.secNavDivWrapper {
+  position: sticky;
+  .secNavDiv {
+    height: fit-content;
+    width: 100%;
+    position: sticky;
+    padding: 12px 15px 18px 15px;
+    background-color: #001338;
+    top: 53px;
+
+    @media screen and (min-width: 768px) {
+      padding: 12px 30px 18px 30px;
+    }
+  }
+}
+
+.catAlignmentContainer {
   min-height: 100vh;
   height: 100%;
-  padding-bottom: 55px;
   width: 100%;
   background-color: ghostwhite;
   color: #333333;
@@ -11,21 +34,11 @@
   position: relative;
   overflow: hidden;
 
-  .navBlend {
-    width: 100vw;
-    position: fixed;
-    height: 53px;
-    background: #ffffff;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-    z-index: 3;
-  }
-
   .blogContainerDiv {
     position: relative;
     display: flex;
     flex-direction: column;
     position: relative;
-    top: 53px;
     width: 100%;
     align-items: center;
     min-width: 100vw;
@@ -65,18 +78,6 @@
       flex-direction: column;
       background-color: #ffffff;
       position: relative;
-
-      .secNavDiv {
-        height: fit-content;
-        width: 100%;
-        position: sticky;
-        padding: 12px 15px 18px 15px;
-        background-color: #001338;
-
-        @media screen and (min-width: 768px) {
-          padding: 12px 30px 18px 30px;
-        }
-      }
 
       .bodyContainer {
         width: 100%;
@@ -252,7 +253,7 @@
                   border: 1px solid #dfe3e8;
                   border-radius: 4px;
 
-                  a{
+                  a {
                     transform: none;
                     font-family: "Product Sans";
                     font-style: normal;
@@ -260,7 +261,7 @@
                     font-size: 14px;
                     line-height: 140%;
                     text-align: center;
-                    color: #212B36;
+                    color: #212b36;
                   }
                 }
 
@@ -337,10 +338,30 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .alignmentContainer {
+  .navBlend {
+    width: 100%;
+    position: sticky;
+    top: 0px;
+    height: 67px;
+    background: #ffffff;
+  }
+  .secNavDivWrapper {
+    position: sticky;
+
+    .secNavDiv {
+      height: fit-content;
+      width: 100%;
+      position: sticky;
+      padding: 12px 5.5% 18px 5.5%;
+      @media screen and (min-width: 1024px) {
+        padding: 12px 80px 18px 80px;
+      }
+       
+    }
+  }
+  .catAlignmentContainer {
     height: 100%;
     padding: 0px;
-    padding-bottom: 69px;
     width: 100%;
     background: #ffffff;
     color: #333333;
@@ -349,32 +370,15 @@
     align-items: center;
     overflow: hidden;
 
-    .navBlend {
-      width: 100%;
-      position: fixed;
-      top: 0px;
-      height: 67px;
-      background: #ffffff;
-    }
-
     .blogContainerDiv {
       position: relative;
       width: 100%;
-      top: 67px;
       background-color: #ffffff;
-
-      .blogSecNavBlend {
-        height: 70px;
-        width: 100%;
-        background-color: #001338;
-        position: absolute;
-        top: 0px;
-      }
 
       .footerBlend {
         position: absolute;
         width: 100%;
-        height: 435.5px;
+        height: 435px;
         background: #4f4f4f;
         bottom: 0px;
 
@@ -396,13 +400,6 @@
         background-color: #ffffff;
         position: relative;
         box-shadow: none;
-
-        .secNavDiv {
-          height: fit-content;
-          width: 100%;
-          position: sticky;
-          padding: 12px 5.5% 18px 5.5%;
-        }
 
         .bodyContainer {
           padding: 24px 5.5% 40px 5.5%;
