--- a/styles/components/_marketNewsTypeSecondary.scss
+++ b/styles/components/_marketNewsTypeSecondary.scss
@@ -75,7 +75,20 @@
     }
 
     .blogBy {
-      display: none;
+      display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 8px;
+      font-size: 13px;
+      .author,
+        .posted {
+          font-family: "Ek Mukta";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 13px;
+          line-height: 140%;
+          color: #4f4f4f;
+        }
     }
   }
 }
