--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   width: 100%;
   max-width: 100%;
+  overflow: hidden;
   position: sticky;
   height: 53px;
   top: 0px;
