--- a/styles/components/_detailProperty.scss
+++ b/styles/components/_detailProperty.scss
@@ -145,6 +145,10 @@
               color: #2c2c2c;
               margin: 0px;
               padding: 0px;
+              overflow: hidden;
+              display: -webkit-box;
+              -webkit-line-clamp: 1;
+              -webkit-box-orient: vertical;
             }
           }
 
@@ -164,6 +168,10 @@
               color: #707580;
               margin: 0px;
               padding: 0px;
+              overflow: hidden;
+              display: -webkit-box;
+              -webkit-line-clamp: 1;
+              -webkit-box-orient: vertical;
             }
           }
 
