--- a/styles/components/_MainProperty.scss
+++ b/styles/components/_MainProperty.scss
@@ -16,6 +16,7 @@
   border: 1px solid #d8d8d8;
   border-radius: 6px;
   position: relative;
+  cursor: pointer;
 
   .saleRentTag {
     display: flex;
