--- a/styles/pages/_blogDetails.scss
+++ b/styles/pages/_blogDetails.scss
@@ -265,6 +265,7 @@
                   gap: 24px;
 
                   .blogDetailsThumbnail {
+                    position: relative;
                     max-width: 100%;
                     height: fit-content;
                     border-radius: 5px;
