--- a/styles/components/_MainProperty.scss
+++ b/styles/components/_MainProperty.scss
@@ -4,6 +4,7 @@
 }
 
 .card {
+  position: relative;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -19,6 +20,7 @@
   cursor: pointer;
 
   .saleRentTag {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -48,6 +50,7 @@
   }
 
   .imageContainer {
+    position: relative;
     width: 100%;
     height: 140px;
     border-radius: 3px;
