--- a/styles/components/_lawAndPolicy.scss
+++ b/styles/components/_lawAndPolicy.scss
@@ -42,6 +42,7 @@
 }
 
 .lawPolicyCardDiv {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -53,6 +54,7 @@
   align-self: stretch;
 
   .lawPolicyCard {
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -66,6 +68,7 @@
     align-self: stretch;
 
     .imageContainer {
+      position: relative;
       display: flex;
       justify-content: flex-start;
       align-items: center;
@@ -78,8 +81,10 @@
 
       .image {
         height: 100%;
-        width: auto;
+        width: 100%;
         transition: 0.3s ease-in-out;
+        border-radius: inherit;
+        // transform: scaleX(1.01);
       }
     }
 
@@ -191,6 +196,7 @@
   }
 
   .lawPolicyCardDiv {
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -216,6 +222,10 @@
       .imageContainer {
         width: 100%;
         height: 182px;
+        .imgage{
+          height: 100%;
+          width: auto;
+        }
       }
 
       .blogContents {
