--- a/styles/components/_ourThoughts.scss
+++ b/styles/components/_ourThoughts.scss
@@ -11,6 +11,7 @@
   cursor: pointer;
 
   .imageContainer {
+    position: relative;
     width: 120px;
     height: 100%;
     background: #d9d9d9;
