--- a/styles/layout/_blogNavbar.scss
+++ b/styles/layout/_blogNavbar.scss
@@ -96,8 +96,8 @@ select:focus {
               // top: -10px;
               width: 100%;
               display: flex;
-              justify-content: flex-end;
-              padding-right: 10px;
+              justify-content: flex-start;
+              padding-left: 10px;
               a {
                 background-color: #001338;
                 width: fit-content;
