--- a/styles/components/_bottomComponent.scss
+++ b/styles/components/_bottomComponent.scss
@@ -1,13 +1,14 @@
 .bottomComponent {
   width: 100%;
-  height: 100%;
+  height: 90px;
   display: flex;
   flex-direction: row;
   gap: 16px;
+  cursor: pointer;
 
   .imageDiv {
     width: 120px;
-    height: 100%;
+    height: 90px;
     overflow: hidden;
     position: relative;
     overflow: hidden;
@@ -49,6 +50,7 @@
 
     .headingDiv {
       width: 100%;
+      min-width: 200px;
       height: fit-content;
       font-family: "Ek Mukta";
       font-style: normal;
