--- a/styles/layout/_blogNavbar.scss
+++ b/styles/layout/_blogNavbar.scss
@@ -1,5 +1,3 @@
-
-
 a:hover {
   transform: none;
 }
@@ -107,7 +105,7 @@ select:focus {
             }
           }
         }
-       
+
         .expandedNavItems {
           display: none;
         }
@@ -156,10 +154,17 @@ select:focus {
             line-height: 140%;
             color: #545454;
           }
-          .searchIcon {
+          .searchIconButton {
             position: absolute;
             right: 16px;
             cursor: pointer;
+            display: flex;
+            border: none;
+            background-color: transparent;
+            align-items: center;
+            .searchIcon {
+              position: relative;
+            }
           }
         }
 
@@ -199,7 +204,6 @@ select:focus {
   }
 
   @media only screen and (min-width: 1440px) {
-
     .expandedNavItems {
       display: block !important;
     }
