--- a/styles/pages/_cate_slug.scss
+++ b/styles/pages/_cate_slug.scss
@@ -423,7 +423,7 @@
 
                 .sortSection {
                   position: absolute;
-                  top: 42px;
+                  bottom: -10px;
                   right: -29px;
                 }
               }
