--- a/styles/layout/_blogNavbar.scss
+++ b/styles/layout/_blogNavbar.scss
@@ -153,6 +153,13 @@ select:focus {
             font-size: 14px;
             line-height: 140%;
             color: #545454;
+
+            input[type="search"]::-webkit-search-decoration,
+            input[type="search"]::-webkit-search-cancel-button,
+            input[type="search"]::-webkit-search-results-button,
+            input[type="search"]::-webkit-search-results-decoration {
+              display: none;
+            }
           }
           .searchIconButton {
             position: absolute;
@@ -189,10 +196,6 @@ select:focus {
             background-color: transparent;
             z-index: 1;
           }
-
-          // .languageSelect:focus {
-          //   outline: none;
-          // }
 
           .selectArrow {
             position: absolute;
