--- a/styles/components/_socialMedia.scss
+++ b/styles/components/_socialMedia.scss
@@ -1,9 +1,11 @@
 .socialContainerDiv {
   position: relative;
   padding-top: 5%;
-  gap: 17%;
-  @media only screen and (min-width: 500px) {
-    gap: 14%;
+  gap: 20%;
+  padding-left: 5%;
+  @media only screen and (min-width: 420px) {
+    gap: 13.8%;
+    padding: 0px;
   }
   display: flex;
   justify-content: flex-start;
