Dropdown Css Fixes

--- a/styles/layout/_blogNavbar.scss
+++ b/styles/layout/_blogNavbar.scss
@@ -46,6 +46,23 @@ select:focus {
         align-items: center;
         margin: 0;
         padding: 0;
+
+        li {
+          display: flex;
+          align-items: center;
+          margin: 0;
+          padding: 0;
+          list-style: none;
+        }
+
+        .moreDropDown {
+          display: flex;
+          align-items: center;
+          margin: 0;
+          padding: 0;
+          cursor: pointer;
+          list-style: none;
+        }
       }
 
       @media only screen and (min-width: 1024px) {
@@ -77,7 +94,6 @@ select:focus {
           }
           span {
             width: fit-content;
-            // height: 20px;
             font-family: "Ek Mukta";
             font-style: normal;
             font-weight: 400;
@@ -97,11 +113,9 @@ select:focus {
             background-color: #001338;
             min-width: max-content;
             gap: 2px;
-            // border: solid 1px white;
 
             li {
               position: relative;
-              // top: -10px;
               width: 100%;
               display: flex;
               justify-content: flex-start;
@@ -220,5 +234,21 @@ select:focus {
     .expandedNavItems {
       display: block !important;
     }
+  }
+}
+
+//FOR ANT DESIGN DROPDOWN
+.ant-dropdown-menu {
+  background-color: #001338 !important;
+
+  li {
+    color: #ffffff !important;
+    list-style: none !important;
+  }
+}
+
+.ant-dropdown-menu-title-content {
+  &:hover {
+    text-decoration: underline !important;
   }
 }
