other menu dropdown css fixes

--- a/styles/layout/_blogNavbar.scss
+++ b/styles/layout/_blogNavbar.scss
@@ -62,6 +62,7 @@ select:focus {
           padding: 0;
           cursor: pointer;
           list-style: none;
+          position: relative;
         }
       }
 
