Unused packages removed, conversion to ant design and excess files removed

--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -12,4 +12,4 @@
 @import "./bottomComponent.scss";
 @import "./detailProperty.scss";
 @import "./ourThoughts";
-@import "./socialMedia"
+@import "./socialMedia";
