--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -215,7 +215,7 @@
           min-width: 86px;
           width: 68%;
           height: 24px;
-          font-family: "Roboto";
+          font-family: "Roboto",Pacifico Regular;
           font-style: normal;
           font-weight: 400;
           font-size: 14px;
@@ -439,7 +439,7 @@
             min-width: 86px;
             width: 68%;
             height: 24px;
-            font-family: "Roboto";
+            font-family: "Roboto",Pacifico Regular;
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
