--- a/styles/components/_MainProperty.scss
+++ b/styles/components/_MainProperty.scss
@@ -138,7 +138,7 @@
         align-items: center;
         width: fit-content;
         height: min-content;
-        gap: 8px;
+        gap: 4px;
 
         .iconContainer {
           position: relative;
@@ -150,6 +150,9 @@
           flex-direction: row;
           justify-content: center;
           align-items: center;
+          height: 18px;
+          width: 18px;
+          padding: 2.25px;
 
           .overviewIcons {
             margin: 0px;
