--- a/styles/components/_bottomComponent.scss
+++ b/styles/components/_bottomComponent.scss
@@ -34,8 +34,7 @@
     }
 
     .image {
-      width: 100%;
-      height: auto;
+      object-fit: cover;
       transition: 0.3s ease-in-out;
     }
   }
