--- a/styles/fonts/_main.scss
+++ b/styles/fonts/_main.scss
@@ -1,14 +1,20 @@
 @font-face {
   font-family: "Product Sans";
-  src: url("/Fonts/ProductSans.ttf") format("truetype");
+  src:local('Pacifico Regular'), local('Pacifico-Regular'),
+  url("/Fonts/ProductSans.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Ek Mukta";
-  src: url("/Fonts/EkMukta-Regular.ttf") format("truetype");
+  src: local('Pacifico Regular'), local('Pacifico-Regular'),
+  url("/Fonts/EkMukta-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Ek Mukta Bold";
-  src: url("/Fonts/EkMukta-ExtraBlod.ttf") format("truetype");
+  src:local('Pacifico Regular'), local('Pacifico-Regular'),
+  url("/Fonts/EkMukta-ExtraBlod.ttf") format("truetype");
+  font-display: swap;
 }
