--- a/styles/components/_categorySpecificBlog.scss
+++ b/styles/components/_categorySpecificBlog.scss
@@ -23,6 +23,7 @@
       transition: 0.3s ease-in-out;
       border-radius: 6px;
       max-height: 422px;
+      object-fit: cover;
       overflow: hidden;
     }
   }
