--- a/styles/components/_skeleton.scss
+++ b/styles/components/_skeleton.scss
@@ -9,10 +9,18 @@
 .skeletonLine{
   width: 100%;
   height: .8em;
-
+  margin-bottom: .35rem;
   animation: skeleton 1s linear infinite alternate;
   opacity: 0.7;
   border-radius: 2px;
+}
+
+.skeletonLine:last-child{
+  width: 70%;
+}
+
+.skeletonLine:first-child{
+  width: 100%;
 }
 
 @keyframes skeleton {
