--- a/styles/pages/_cate_slug.scss
+++ b/styles/pages/_cate_slug.scss
@@ -306,7 +306,7 @@
               height: 223px;
               background-color: #d9d9d9;
               z-index: 0;
-              display: flex;
+              display: none;
               justify-content: center;
               align-items: center;
               font-family: "Product Sans";
