--- a/styles/components/_featuredProperties.scss
+++ b/styles/components/_featuredProperties.scss
@@ -22,10 +22,8 @@
     }
 
     .image {
-      width: auto;
-      height: 100%;
       border-radius: inherit;
-      object-fit: contain;
+      object-fit: cover;
       transition: 0.3s ease-in-out;
     }
   }
