--- a/styles/components/_relatedBlogs.scss
+++ b/styles/components/_relatedBlogs.scss
@@ -16,10 +16,9 @@
     overflow: hidden;
 
     .relatedBlogImages {
-      width: auto;
-      height: 100%;
       border-radius: 6px;
       transition: 0.3s ease-in-out;
+      object-fit: cover;
     }
   }
 
