--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -35,7 +35,7 @@
         height: 79px;
 
         .contacts {
-          font-family: "Roboto";
+          font-family: "Roboto",Pacifico Regular;
           font-style: normal;
           font-weight: 400;
           font-size: 14px;
@@ -314,7 +314,7 @@
           height: 79px;
 
           .contacts {
-            font-family: "Roboto";
+            font-family: "Roboto",Pacifico Regular;
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
@@ -612,7 +612,7 @@
           height: 79px;
 
           .contacts {
-            font-family: "Roboto";
+            font-family: "Roboto",Pacifico Regular;
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
