--- a/styles/components/_MainProperty.scss
+++ b/styles/components/_MainProperty.scss
@@ -62,8 +62,7 @@
 
     .img {
       border-radius: inherit;
-      width: 100%;
-      height: auto;
+      object-fit: cover;
       transition: 0.3s ease-in-out;
     }
   }
@@ -287,6 +286,7 @@
       height: 198px;
 
       .img {
+        object-fit: cover;
       }
     }
 
