--- a/styles/components/_lawAndPolicy.scss
+++ b/styles/components/_lawAndPolicy.scss
@@ -80,8 +80,7 @@
       overflow: hidden;
 
       .image {
-        height: 100%;
-        width: 100%;
+        object-fit: cover;
         transition: 0.3s ease-in-out;
         border-radius: inherit;
         // transform: scaleX(1.01);
@@ -282,8 +281,7 @@
         height: 182px;
 
         .image {
-          width: 100%;
-          height: auto;
+          object-fit: cover;
         }
       }
     }
