--- a/styles/components/_marketNewsTypeMain.scss
+++ b/styles/components/_marketNewsTypeMain.scss
@@ -23,7 +23,7 @@
 
     .image {
       border-radius: inherit;
-      object-fit:cover;
+      object-fit: cover;
       transition: 0.3s ease-in-out;
     }
   }
@@ -54,6 +54,7 @@
         text-transform: uppercase;
         color: #0000ff;
       }
+      
     }
 
     .blogHeader {
@@ -78,7 +79,9 @@
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
+        transition: ease-in-out 0.3s;
       }
+      
     }
 
     .blogBody {
